--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <div class="col-sm-12 col-md-6">
           <div class="card">
             <div class="card-body">
-              <h2>عکس را آپلود کنید</h2>
+              <h2>عکس را انتخاب کنید</h2>
 
 
               <div class="mb-3">
