--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="col-sm-12 col-md-6">
           <div class="card">
             <div class="card-body">
-              <h2>عکس را انتخاب کنید</h2>
+              <h2>عکس سیاه و سفید را انتخاب کنید</h2>
 
               <div class="mb-3">
                 <!-- <label for="bwimage"  class="form-label">Default file input example</label> -->
@@ -84,6 +84,13 @@
         </div>
       </div>
     </div>
+    <nav class="fixed-bottom navbar-light bg-light">
+      <div class="container-fluid text-center">
+        <a class="navbar-brand" href="https://www.sahandbabali.com/"
+          >sahandbabali.com</a
+        >
+      </div>
+    </nav>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
